--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <span>
                             <i class="fas fa-map-marker-alt"></i>
                         </span>
-                        42 Dream House, Dreammy street, 7131 Dreamville, USA
+                        #87, Pandusar Gurudwara Street, Nabha
                     </div>
                     <div>
                         <span>
