--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@
                         <span>
                             <i class="far fa-envelope"></i>
                         </span>
-                        company@gmail.com
+                        harmanbatheja15@gmail.com
                     </div>
                     <div>
                         <span>
                             <i class="fas fa-phone"></i>
                         </span>
-                        1212121212
+                        1234567890
                     </div>
                     <div class="payment-methods">
                         <img src="./images/payment.png" alt="">
