--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <li class="menu-item menu-item-has-children">
                             <a href="#" data-toggle="sub-menu">Login <i class="plus"></i></a>
                             <ul class="sub-menu">
-                                <li class="menu-item new_customer">
-                                    New Customer? <a href="#">Sign Up</a>
+                                <li class="menu-item">
+                                    <a href="#">New User, Sign Up</a>
                                 </li>
                             </ul>
                         </li>
@@ -389,7 +389,7 @@
                         <span>
                             <i class="fas fa-map-marker-alt"></i>
                         </span>
-                        #87, Pandusar Gurudwara Street, Nabha
+                        The Indo British School, Patiala Road, Nabha
                     </div>
                     <div>
                         <span>
@@ -401,7 +401,7 @@
                         <span>
                             <i class="fas fa-phone"></i>
                         </span>
-                        1234567890
+                        1212121212
                     </div>
                     <div class="payment-methods">
                         <img src="./images/payment.png" alt="">
@@ -412,7 +412,7 @@
         </div>
     </footer>
     <!-- End Footer -->
-    
+
     <script src="app.js"></script>
 
 </body>
