--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                             <a href="index.html" class="active">Home</a>
                         </li>
 
+                        <li class="menu-item">
+                            <a href="#latestProducts">Latest Products</a>
+                        </li>
+
+                        <li class="menu-item">
+                            <a href="#cookingEssentials">Cooking Essentials</a>
+                        </li>
+
                         <li class="menu-item menu-item-has-children">
                             <a href="#" data-toggle="sub-menu">Login <i class="plus"></i></a>
                             <ul class="sub-menu">
@@ -78,7 +86,7 @@
     </div>
 
     <!-- New Products -->
-    <section class="section products">
+    <section class="section products" id="latestProducts">
         <div class="title">
             <h2>Latest Products</h2>
             <span>Styles for men and women | Upto 40% off</span>
@@ -248,7 +256,7 @@
     </section>
 
     <!-- Latest Products -->
-    <section class="section products">
+    <section class="section products" id="cookingEssentials" style="margin-bottom: 8rem;">
         <div class="title">
             <h2>Cooking Essentials</h2>
             <span>Select from the premium product brands.</span>
